src/objects/Engagement_Totals__c.object
<CustomObject>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Level__c</fullName>
        <label>Engagement Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <inlineHelpText>Number of Contacts</inlineHelpText>
        <label>Number of Contacts</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement Totals</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Number_of_Contacts__c</columns>
        <columns>Engagement_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Engagement Totals Nbr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Totals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>